--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "json.server": "json-server --watch db.json --port 3001",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.8.2",
+    "axios": "^0.27.2",
     "graphql": "^16.5.0",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.16",
     "uuid": "^8.3.2"
   }
